package seedu.duke;

public abstract class Command {


}
