package seedu.duke;

public class ListCommand extends Command {
}
